Decreased video and made changes

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid mainvid">
         <video id = 'video' autoplay loop muted>
-            <source src= "video/homevideo.mp4" type="video/mp4" />
+            <source src= "video/homevideonew.mp4" type="video/mp4" />
         </video>
         <div class="overlay">
             <nav class="navbar navbar-expand-lg navbar-fixed fixed-top">
@@ -68,7 +68,7 @@
                     </div>
                     <div class="col-lg-6 design text-left">
                         <label class="text-left display-4 about hover">About</label>
-                        <p class="text-left note note1">Hello World ! Myself Aryan Shridhar from Mumbai , India . Currently I am a first computer science undergraduate student from VIT-Vellore and a member of IEEE-VIT. As a beginner in the vast field of computer science , I spend most of my time exploring new domains of it and trying them out to excatly know where do I fit in !<br>
+                        <p class="text-left note">Hello World ! I am Aryan Shridhar from Mumbai , India . Currently I am a first computer science undergraduate student from VIT-Vellore and a member of IEEE-VIT. As a beginner in the vast field of computer science , I spend most of my time exploring new domains of it and trying them out to excatly know where do I fit in !<br>
                             <br>Well , That's all about me in a nutshell. Thank you :)
                         </p>
                     </div>
