--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                 <div class="row">
                     <div class="col-6 text-center right">
                         <div class="borderone">
-                            <img src="photos/profile.jpg" class="img-thumbnail img-fluid img-responsive hover" width="400">
-                            <img src="photos/newprofile.png" class="img-thumbnail img-fluid img-responsive tohover" width="550" height="550">
+                            <img src="photos/profile.jpg" class="img-thumbnail hover" width="400">
+                            <img src="photos/newprofile.png" class="img-thumbnail tohover" width="550" height="550">
                         </div>
                     </div>
                     <div class="col-lg-6 design text-left">
