--- a/index.html
+++ b/index.html
@@ -89,25 +89,25 @@
                             <img src="photos/python.png" class="hovericon img-fluid img-responsive" width="200">
                         </div>
                         <div class="col-lg-4 mb-4 text-center">
-                            <img src="photos/html.png" class="hovericon img-fluid img-responsive" width='400'>
+                            <img src="photos/html.png" class="hovericon img-fluid htmlimg img-responsive" width='400'>
                         </div>
                         <div class="col-lg-4 mb-4">
                             <img src="photos/c.svg" class="hovericon img-fluid img-responsive" width="200">
                         </div>
                     </div>
-                    <div class="row text-center mt-5">
+                    <div class="row text-center imgmove">
                         <div class="col-lg-4 mb-4">
                             <img src="photos/cpp.svg" class="hovericon img-fluid img-responsive" width="200">
                         </div>
                         <div class="col-lg-4 mb-4">
-                            <img src="photos/django.png" class="hovericon img-fluid img-responsive" width='350'>
+                            <img src="photos/django.png" class="hovericon img-fluid djangoimg img-responsive" width='350'>
                             
                         </div>
                         <div class="col-lg-4 mb-4">
-                            <img src="photos/flask.png" class="hovericon img-fluid img-responsive" width="400">
+                            <img src="photos/flask.png" class="hovericon img-fluid flaskimg img-responsive" width="400">
                         </div>
                     </div>
-                    <div class="row text-center mt-5">
+                    <div class="row text-center imgmove">
                         <div class="col-lg-4 mb-4">
                             <img src="photos/css.png" class="hovericon img-fluid img-responsive" width="200">
                         </div>
@@ -116,7 +116,7 @@
                             
                         </div>
                         <div class="col-lg-4 mb-4">
-                            <img src="photos/bootstrap.png" class="hovericon img-fluid img-responsive" width="550">
+                            <img src="photos/bootstrap.png" class="hovericon img-fluid bootstrapimg img-responsive" width="550">
                         </div>
                     </div>
                 </div>
