Changed project section

--- a/index.html
+++ b/index.html
@@ -135,6 +135,17 @@
                     <div class="col-lg-4">
                         <div class="card mb-3">
                             <div class="card-body">
+                                <h1 class="project-title">Recap 1.0</h1>
+                            <p class="card-text mycard mt-3 last">Recap 1.0 is a website that lets you summarize any youtube video with the desired percentage shrink.Built using gensim and django framework</p>
+                            <a href="https://github.com/aryanshridhar/Recap" target="_blank">
+                                <button class="hvr-sweep-to-right">View</button>
+                            </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card mb-3">
+                            <div class="card-body">
                                 <h1 class="project-title">Music Downloader</h1>
                             <p class="card-text mycard mt-3 set">Music Downloader Website built using Django framework which lets you download song directly to your local machine .</p>
                             <a href="https://github.com/aryanshridhar/Music-Downloader-WebApp" target="_blank">
@@ -150,17 +161,6 @@
                             <p class="card-text mycard mt-3 second">An Ecommerce website using Django Backend with user registration and compatibilty to add their own products in it</p>
                             <a href="https://github.com/aryanshridhar/Ecommerce-Website" target="_blank">
                             <button class="hvr-sweep-to-right">View</button>
-                            </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="card mb-3">
-                            <div class="card-body">
-                                <h1 class="project-title">Equation Solver</h1>
-                            <p class="card-text mycard mt-3 last">Python Graphical User Interface using tkinter library enabling it to solve equations with 2 variable and 3 variable .</p>
-                            <a href="https://github.com/aryanshridhar/Equation-Solver-GUI" target="_blank">
-                                <button class="hvr-sweep-to-right">View</button>
                             </a>
                             </div>
                         </div>
